Fix and unify facet load indicators.
- Adds whitespace between spinner and text in JS-rendered loading indicator for uniformity with phtml rendered versions.
- Adds a class to hierarchical facet load indicator to remove extra borders from the list-group-item.
- Restores load indicator for normal (non-hierarchical) deferred facets and tweaks styles to ensure it looks good (avoids flex to keep the spinner steady).
- Improves the look of facet load interruption message.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -27,11 +27,15 @@
 
 .facet,
 .facet-group .title,
-.facet-load-indicator {
-  display: flex;
+.facet-load-indicator,
+.facet-load-failed {
   padding: .5rem;
   line-height: 1.5rem;
   background-color: transparent;
+}
+.facet,
+.facet-group .title {
+  display: flex;
 
   .text {
     flex-grow: 1;
@@ -54,7 +58,8 @@
   }
 }
 .facet-group .facet,
-.facet-load-indicator {
+.facet-load-indicator,
+.facet-load-failed {
   border-bottom: 1px solid @list-group-border;
 }
 .facet-group .title {
